=======
CHANGES
=======

3.6.2 (unreleased)
------------------

- Added PermissionsVocabulary and PermissionIdsVocabulary vocabularies
  to the ``zope.security.permission`` module. They were moved from
  the ``zope.app.security`` package.

- Add zcml permission definition for the special "zope.Public"
  permission.

- Add security declarations for the ``zope.security.permisson.Permission`` class.

- Improve test coverage.

3.6.1 (2009-03-10)
------------------

- Use ``from`` imports instead of ``zope.deferred`` to avoid circular
  import problems, thus drop dependency on ``zope.deferredimport``.

- Raise NoInteraction when zope.security.checkPermission is called
  without interaction being active (LP #301565).

- Don't define security checkers for deprecated set types from the
  "sets" module on Python 2.6. It's discouraged to use them and
  `set` and `frozenset` built-in types should be used instead. 

- Change package's mailng list address to zope-dev at zope.org as
  zope3-dev at zope.org is now retired.

- Remove old zpkg-related files.

3.6.0 (2009-01-31) 
------------------

- Install decorated security checker support on LocationProxy from the
  outside.

- Added support to bootstrap on Jython.

- Moved the `protectclass` module from `zope.app.security` to this
  package to reduce the number of dependencies on `zope.app.security`.

- Moved the <module> directive implementation from `zope.app.security`
  to this package.

- Moved the <class> directive implementation from `zope.app.component`
  to this package.


3.5.2 (2008-07-27)
------------------

- Made C code compatible with Python 2.5 on 64bit architectures.


3.5.1 (2008-06-04)
------------------

- Add `frozenset`, `set`, `reversed`, and `sorted` to the list of safe
  builtins.


3.5.0 (2008-03-05)
------------------

- Changed title for ``zope.security.management.system_user`` to be more
  presentable.


3.4.0 (2007-10-02)
------------------

- Updated meta-data.


3.4.0b5 (2007-08-15)